# api/routes/programsRoute.js
@@ -1,0 +1,14 @@
+import FormData from "../middlewares/blogPhotoMiddleware.js"
+import express  from "express"
+import Programs from "../controllers/programsController.js"
+
+const router = express.Router()
+
+
+router.route("/").post(FormData.uploadSettingImages,Programs.programsCreate)
+router.route("/").get(Programs.programsGet)
+router.route("/:id").put(FormData.uploadSettingImages,Programs.programsUpdate)
+router.route("/:id").delete(Programs.programsDelete)
+
+
+export default router
